==> GiovanniScotti/NRF24L01-STM32-DRIVER/nrf24.c <==
#include "nrf24.h"

void NRF24_begin(GPIO_TypeDef *nrf24PORT, uint16_t nrfCSN_Pin, uint16_t nrfCE_Pin,
	SPI_HandleTypeDef *nrfSPI, TIM_HandleTypeDef *nrfTIM) {

	// Initializes internal pointers.
	nrf24_hspi = nrfSPI;
	nrf24_htim = nrfTIM;
	nrf24_PORT = nrf24PORT;
	nrf24_CSN_PIN = nrfCSN_Pin;
	nrf24_CE_PIN = nrfCE_Pin;

	// Puts GPIOs to idle state.
	NRF24_csn(1);
	NRF24_ce(0);

	// Initial delay to give some time to the module to start up.
	HAL_Delay(10);

	// Soft Reset registers default values.
	NRF24_write_register(0x00, 0x08);
	NRF24_write_register(0x01, 0x3f);
	NRF24_write_register(0x02, 0x03);
	NRF24_write_register(0x03, 0x03);
	NRF24_write_register(0x04, 0x03);
	NRF24_write_register(0x05, 0x02);
	NRF24_write_register(0x06, 0x0f);
	NRF24_write_register(0x07, 0x0e);
	NRF24_write_register(0x08, 0x00);
	NRF24_write_register(0x09, 0x00);

	uint8_t pipeAddrVar[6];
	pipeAddrVar[4]=0xE7;
	pipeAddrVar[3]=0xE7;
	pipeAddrVar[2]=0xE7;
	pipeAddrVar[1]=0xE7;
	pipeAddrVar[0]=0xE7;
	NRF24_write_registerN(0x0A, pipeAddrVar, 5);

	pipeAddrVar[4]=0xC2;
	pipeAddrVar[3]=0xC2;
	pipeAddrVar[2]=0xC2;
	pipeAddrVar[1]=0xC2;
	pipeAddrVar[0]=0xC2;
	NRF24_write_registerN(0x0B, pipeAddrVar, 5);

	NRF24_write_register(0x0C, 0xC3);
	NRF24_write_register(0x0D, 0xC4);
	NRF24_write_register(0x0E, 0xC5);
	NRF24_write_register(0x0F, 0xC6);

	pipeAddrVar[4]=0xE7;
	pipeAddrVar[3]=0xE7;
	pipeAddrVar[2]=0xE7;
	pipeAddrVar[1]=0xE7;
	pipeAddrVar[0]=0xE7;
	NRF24_write_registerN(0x10, pipeAddrVar, 5);
	NRF24_write_register(0x11, 0);
	NRF24_write_register(0x12, 0);
	NRF24_write_register(0x13, 0);
	NRF24_write_register(0x14, 0);
	NRF24_write_register(0x15, 0);
	NRF24_write_register(0x16, 0);

	NRF24_ACTIVATE_cmd();
	NRF24_write_register(0x1c, 0);
	NRF24_write_register(0x1d, 0);

	// Initializes retries 15 and delay 1250us.
	NRF24_setRetries(15, 15);
	// Initializes PA level to max (0dB).
	NRF24_setPALevel(RF24_PA_0dB);
	// Initializes data rate to 1Mbps.
	NRF24_setDataRate(RF24_2MBPS);
	// Initializes CRC length to 16 bits (2 bytes).
	NRF24_setCRCLength(RF24_CRC_16);
	// Disables dynamic payload.
	NRF24_disableDynamicPayloads();
	// Sets payload size.
	NRF24_setPayloadSize(32);

	// Resets status register.
	NRF24_resetStatus();
	// Initializes channel to 76.
	NRF24_setChannel(76);
	// Flushes buffers.
	NRF24_flush_tx();
	NRF24_flush_rx();

	// Turns off the radio.
	NRF24_powerDown();

	return;
}

void NRF24_DelayMicroSeconds(uint32_t uSec) {
	__HAL_TIM_SET_COUNTER(nrf24_htim, 0);
	while(__HAL_TIM_GET_COUNTER(nrf24_htim) < uSec);
	return;
}

void NRF24_csn(int state) {
	if(state) HAL_GPIO_WritePin(nrf24_PORT, nrf24_CSN_PIN, GPIO_PIN_SET);
	else HAL_GPIO_WritePin(nrf24_PORT, nrf24_CSN_PIN, GPIO_PIN_RESET);
	return;
}

void NRF24_ce(int state) {
	if(state) HAL_GPIO_WritePin(nrf24_PORT, nrf24_CE_PIN, GPIO_PIN_SET);
	else HAL_GPIO_WritePin(nrf24_PORT, nrf24_CE_PIN, GPIO_PIN_RESET);
	return;
}

uint8_t NRF24_read_register(uint8_t reg) {
	uint8_t spiBuf[2];
	uint8_t retData;

	// Puts CSN low.
	NRF24_csn(0);
	// Transmits register address.
	spiBuf[0] = reg & 0x1F;
	HAL_SPI_Transmit(nrf24_hspi, spiBuf, 1, 100);
	// Receives data.
	HAL_SPI_Receive(nrf24_hspi, &spiBuf[1], 1, 100);
	retData = spiBuf[1];
	// Sets CSN high
	NRF24_csn(1);

	return retData;
}

void NRF24_read_registerN(uint8_t reg, uint8_t *buf, uint8_t len) {
	uint8_t spiBuf[1];

	// Puts CSN low.
	NRF24_csn(0);
	// Transmits register address.
	spiBuf[0] = reg & 0x1F;
	HAL_SPI_Transmit(nrf24_hspi, spiBuf, 1, 100);
	// Receives data.
	HAL_SPI_Receive(nrf24_hspi, buf, len, 100);
	// Sets CSN high.
	NRF24_csn(1);

	return;
}

void NRF24_read_payload(void *buf, uint8_t len) {
	uint8_t cmdRxBuf;

	// Gets data length using payload size.
	uint8_t data_len = MIN(len, NRF24_getPayloadSize());
	// Reads data from RX payload buffer.
	NRF24_csn(0);
	cmdRxBuf = CMD_R_RX_PAYLOAD;
	HAL_SPI_Transmit(nrf24_hspi, &cmdRxBuf, 1, 100);
	HAL_SPI_Receive(nrf24_hspi, buf, data_len, 100);
	NRF24_csn(1);

	return;
}
